Updated the HouseholdService and its tests to use the updated exceptions